feat: enhance BoothDetailsView with purchase count and UI improvements (#5)
* feat: enhance BoothDetailsView with purchase count and UI improvements

* feat: resolve all wildcard imports in BoothDetailsView